--- a/app/assets/stylesheets/components/_profil.scss
+++ b/app/assets/stylesheets/components/_profil.scss
@@ -9,7 +9,7 @@
       font-size: 20px;
       font-weight: bold;
       margin: 0;
-      color: #004792;
+      color: #23537a;
     }
     H3{
       font-family: "Montserrat";
@@ -45,7 +45,7 @@
   .linkedin-form-1{
     background-color: #E6E9EB;
     border-radius: 15px;
-    border-color: #004792;
+    border-color: #3F7CAF;
     height: 20px;
     font-size: xx-small;
     width: 250px;
