--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -10,7 +10,7 @@
 
 <div class="container-profile">
     <div class="card-product-dashboard-3">
-          <h2>Mon profil</h2>
+          <h2>Récapitulatif</h2>
       <div class="profile-details">
         <div class ="profile-details-left">
         <%= image_tag current_user.photos.first, class: "avatar-profile-details-dashboard", alt: "Photo" %>
