--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-10">
+<div class="container mt-15">
   <div class="row">
     <div class="col-12 text-center logo-carr mb-10">
       <img class="img-fluid" src="https://i.ibb.co/CBtyrxS/logo-coworkers-6.png" alt="Coworkers-Logo">
@@ -6,34 +6,34 @@
   </div>
 </div>
 
-<div class="container mt-3">
+<div class="container mt-2">
   <div class="row">
     <form id="search-form" action="<%= workspaces_path %>" method="GET">
       <div class="d-flex justify-content-between w-100 mt-0 form-group col-sm-8 icones">
         <div class="text-center icone">
           <input type="checkbox" id="parking" name="parking" class="tag-selector" />
           <label for="parking"> <i class="fa-solid fa-square-parking fa-2xl"> </i> </label>
-          <p>Parking</p>
+          <p class="small-text">Parking</p>
         </div>
         <div class="text-center icone">
           <input type="checkbox" id="ambiance" name="ambiance" class="tag-selector" />
           <label for="ambiance"> <i class="fa-solid fa-volume-xmark fa-2xl"> </i> </label>
-          <p>Calme</p>
+          <p class="small-text">Calme</p>
         </div>
         <div class="text-center icone">
           <input type="checkbox" id="internet_connexion" name="internet_connexion" class="tag-selector" />
           <label for="internet_connexion"> <i class="fa-solid fa-wifi fa-2xl"></i> </label>
-          <p>Fibre</p>
+          <p class="small-text">Fibre</p>
         </div>
         <div class="text-center icone">
           <input type="checkbox" id="smoking" name="smoking" class="tag-selector" />
           <label for="smoking"> <i class="fa-solid fa-ban-smoking fa-2xl"></i> </label>
-          <p>Fumeur</p>
+          <p class="small-text">Fumeur</p>
         </div>
         <div class="text-center icone">
           <input type="checkbox" id="animals" name="animals" class="tag-selector" />
           <label for="animals"> <i class="fa-solid fa-ban fa-2xl"></i> </label>
-          <p>Animaux</p>
+          <p class="small-text">Animaux</p>
         </div>
       </div>
       <div class="search-container align-items-center d-flex">
