--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -25,8 +25,8 @@
 }
 
 .workspace-card-index {
-  background: white;
-  box-shadow: 0 0px 10px rgba(66, 66, 66, 0.1);
+  background: rgba(255, 255, 255, 0.486);
+  box-shadow: 0 0px 2px rgba(66, 66, 66, 0.1);
   margin: 20px;
   border-radius: 15px;
 }
