--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -123,11 +123,12 @@
 }
 
 .description-text {
+  margin-top: 10px;
   border-radius: 30px;
-  margin-bottom: 8px;
+  margin-bottom: 1px;
   padding: 10px;
-  color: #2b2b2b;
-  box-shadow: 2px 4px 10px rgba(170, 170, 170, 0.2);
+  color: #252525;
+  box-shadow: 0px 0px 10px rgba(170, 170, 170, 0.449);
 }
 .user-info {
   display: flex;
