--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -10,7 +10,7 @@
     font-size: 20px;
     font-weight: bold;
     margin: 0;
-    color: #004792;
+    color: #3F7CAF;
   }
   overflow: hidden;
   background: white;
@@ -77,14 +77,18 @@
   a {
     color: #FCA634;
     text-decoration: none;
+    font-weight: bold;
+    font-size: 14px;
   }
 }
 
 .accept{
   a {
     text-decoration: none;
-    color: black;
+    color: #3F7CAF;
     margin-right: 5px;
+    font-weight: bold;
+    font-size: 14px;
   }
 }
 
