--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -17,7 +17,7 @@ $light-gray: #F4F4F4;
   --gris-fonc: rgba(86, 86, 86, 1);
   --orange-clair: rgba(255, 177, 22, 1);
   --bleu-fonc: rgba(0, 48, 81, 1);
-  --bleu-moyen: rgba(0, 71, 146, 1);
+  --bleu-moyen: rgb(0, 71, 146);
   --bleu-clair: rgba(63, 124, 175, 1);
   --light-black: rgba(35, 35, 35, 1);
   --orange-fonc: rgba(252, 145, 0, 1);
