--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -12,8 +12,8 @@
   <div class="mx-auto mt-2">
       <div>
         <details>
-          <summary><%= image_tag @workspace.user.photos.first, height: 70, width: 70, class: "avatar2", alt: "Photo" %><i class="fa-solid fa-circle-chevron-down fa-sl" style="color: #004792;"></i></summary>
-          <p class="description-text"><%= @workspace.user.description %></p>
+          <summary><%= image_tag @workspace.user.photos.first, height: 60, width: 60, class: "avatar2", alt: "Photo" %><i class="fa-solid fa-circle-chevron-down fa-sl" style="color: #3E567E;"></i></summary>
+          <p class="description-text">Je m'appelle <%= @workspace.user.first_name %>. <%= @workspace.user.description %></p>
         </details>
 
       </div>
@@ -23,59 +23,59 @@
   <div class="workspace-card">
     <div class="workspace-image">
       <% @workspace.photos %>
-      <%= cl_image_tag @workspace.photos.first.key, crop: :fill %>
+      <%= cl_image_tag @workspace.photos.first.key, height:250 %>
       <%= render "heart" %>
     </div>
 
     <ul class="workspace-infos">
       <div class="description-adress-show">
-        <li><i class="fa-solid fa-circle-info fa-xl me-2" style="color: #004792;"></i><%= @workspace.description %></li>
-        <li><i class="fa-solid fa-location-dot fa-xl me-2" style="color: #004792;"></i><%= @workspace.address %></li>
+        <li><i class="fa-solid fa-circle-info fa-xl me-2" style="color: #3E567E;"></i><%= @workspace.description %></li>
+        <li><i class="fa-solid fa-location-dot fa-xl me-2" style="color: #3E567E;"></i><%= @workspace.address %></li>
       </div>
        <div class="font-awesome d-flex justify-content-between">
         <li><% if @workspace.capacity == 1 %>
-          <i class="fa-solid fa-user fa-2xl" style="color: #004792;"></i>
+          <i class="fa-solid fa-user fa-2xl" style="color: #3E567E;"></i>
         <% elsif @workspace.capacity == 2 %>
-          <i class="fa-solid fa-user-group fa-2xl" style="color: #004792;"></i>
+          <i class="fa-solid fa-user-group fa-2xl" style="color: #3E567E;"></i>
         <% elsif @workspace.capacity == 3 %>
-          <i class="fa-solid fa-users fa-2xl" style="color: #004792;"></i>
+          <i class="fa-solid fa-users fa-2xl" style="color: #3E567E;"></i>
         <% end %>
         </li>
         <li>
           <% if @workspace.internet_connexion %>
-            <i class="fa-solid fa-wifi fa-2xl" style="color: #004792;"></i>
+            <i class="fa-solid fa-wifi fa-2xl" style="color: #3E567E;"></i>
           <% else %>
             <i class="fa-solid fa-wifi fa-2xl" style="color: #CDCBD2;"></i>
           <% end %>
         </li>
          <li>
           <% if @workspace.parking %>
-            <i class="fa-solid fa-square-parking fa-2xl" style="color: #004792;"></i>
+            <i class="fa-solid fa-square-parking fa-2xl" style="color: #3E567E;"></i>
           <% else %>
             <i class="fa-solid fa-square-parking fa-2xl" style="color: #CDCBD2;"></i>
           <% end %>
         </li>
         <li>
           <% if @workspace.smoking %>
-            <i class="fa-solid fa-smoking fa-2xl" style="color: #004792;"></i>
+            <i class="fa-solid fa-smoking fa-2xl" style="color: #3E567E;"></i>
           <% else %>
             <i class="fa-solid fa-smoking fa-2xl" style="color: #CBCDD2;"></i>
           <% end %>
         </li>
         <li>
           <% if @workspace.ambiance == "Calme" %>
-            <i class="fa-solid fa-volume-xmark fa-2xl" style="color: #004792;"></i>
+            <i class="fa-solid fa-volume-xmark fa-2xl" style="color: #3E567E;"></i>
           <% elsif @workspace.ambiance == "Animé" %>
             <i class="fa-solid fa-volume-xmark fa-2xl" style="color: #CBCDD2;"></i>
           <% end %>
         </li>
         <li>
           <% if @workspace.animals == "Chien"%>
-            <i class="fa-solid fa-dog fa-2xl" style="color: #004792;"></i>
+            <i class="fa-solid fa-dog fa-2xl" style="color: #3E567E;"></i>
           <% elsif @workspace.animals == "Chat" %>
-            <i class="fa-solid fa-cat fa-2xl" style="color: #004792;"></i>
+            <i class="fa-solid fa-cat fa-2xl" style="color: #3E567E;"></i>
           <% elsif @workspace.animals == "Autre" %>
-            <i class="fa-solid fa-paw fa-2xl" style="color: #004792;"></i>
+            <i class="fa-solid fa-paw fa-2xl" style="color: #3E567E;"></i>
           <% else  %>
             <i class="fa-solid fa-paw fa-2xl" style="color: #cdcbd2;"></i>
           <% end %>
@@ -90,7 +90,9 @@
               </div>
               <div class="chat-right">
                 <%= link_to workspace_create_chatroom_path(@workspace), method: :post do %>
-                  <i class="fa-regular fa-comment fa-2xl" style="color: #ffb116;"></i>
+                              <span class="yellow-btn-mini-workspace">
+          <i class="fa-solid fa-comment" style="color: #f7f7f7;"></i>
+        </span>
                 <% end %>
               </div>
             </div>
