--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,16 @@
-<div class="container d-flex align-items-center justify-content-center vh-100">
+<div class="container mt-4">
+      <div class="mx-auto mt-4">
+          <div class="chat-head">
+            <div class="chat-title">Devenir un coworker</div>
+            <%= link_to :back, class: 'btn btn-default' do %>
+            <i class="fa fa-arrow-left" style="font-size: 1.3em; color: #FFB116;"></i>
+            <% end %>
+          </div>
+      <div class="top-divider"> </div>
+
+      <div class="container d-flex align-items-center justify-content-center">
   <div class="row">
     <div class="col-12 col-md-12 col-lg-12 mx-auto">
-      <div>
-        <h2>Devenir un coworker</h2>
 
           <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= f.error_notification %>
