--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -9,16 +9,24 @@
       <div class="top-divider"> </div>
 </div>
 </div><div class="container-fluid">
-  <div class="mx-auto mt-2">
-      <div>
-        <details>
-          <summary><%= image_tag @workspace.user.photos.first, height: 60, width: 60, class: "avatar2", alt: "Photo" %><i class="fa-solid fa-circle-chevron-down fa-sl" style="color: #3E567E;"></i></summary>
-          <p class="description-text">Je m'appelle <%= @workspace.user.first_name %>. <%= @workspace.user.description %></p>
-        </details>
+<div class="mx-auto mt-2">
+    <div>
+      <details>
+        <summary><%= image_tag @workspace.user.photos.first, height: 60, width: 60, class: "avatar2", alt: "Photo" %><i class="fa-solid fa-circle-chevron-down fa-sl" style="color: #3E567E;"></i></summary>
+        <p class="description-text">Je m'appelle <%= @workspace.user.first_name %>. <%= @workspace.user.description %>
 
-      </div>
-  </div>
+        <% if @workspace.user.skills.any? %>
+          <br><br>
+          J'aime le <%= @workspace.user.skills.join(", ") %>
+          <% if @workspace.user.desired_skills.any? %>
+          et je suis interessé par
+        <% end %>
 
+          <%= @workspace.user.desired_skills.join(", ") %>
+        <% end %>.</p>
+      </details>
+    </div>
+</div>
 
   <div class="workspace-card">
     <div class="workspace-image">
