--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,19 +1,19 @@
 .yellow-btn {
   padding: 10px 20px;
   text-align: center;
+  align-items: center;
   text-transform: uppercase;
   transition: 0.5s;
   background-size: 200% auto;
   color: white;
   border-radius: 10px;
-  display: block;
   border: 0px;
   font-weight: 700;
   box-shadow: 0px 0px 14px -7px #FFB116;
   background-image: linear-gradient(45deg, #FC9100 0%, #FFB116  51%, #FC9100  100%);
   cursor: pointer;
   opacity: 0.9;
-  width: 100%;
+  width: 80%;
   white-space: normal;
 }
 
@@ -119,9 +119,6 @@
   transform: scale(0.95);
 }
 
-.btn-home {
-margin-left: 10%;
-}
 
 .yellow-btn:hover {
   background-position: right center;
