--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -3,12 +3,15 @@
   overflow: hidden;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  display: flex;
+  justify-content: center; /* Centrer horizontalement */
+  align-items: center; /* Centrer verticalement */
 }
 
 .workspace-image img{
+  max-width: 500px;
   margin-top: 20px;
   border-radius: 40px;
-  width: 100%;
 }
 
 .workspace-infos{
