--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -8,15 +8,17 @@
   align-items: center; /* Centrer verticalement */
 }
 
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
 .workspace-image img{
   max-width: 500px;
   margin-top: 20px;
   border-radius: 40px;
 }
 
-.workspace-infos{
-
-}
 
 .workspace-card{
   border-bottom-left-radius: 10px;
@@ -29,7 +31,7 @@
 
 .workspace-info-date{
   font-size: larger;
-    margin-top: 20px;
+  margin-top: 20px;
   padding-top: 20px;
 }
 .bouton-show {
@@ -38,11 +40,10 @@
 
 // HEART
 
-.heart{
+.heart {
   position: absolute;
-  bottom: 20px;
-  right: 20px;
-  z-index: 2;
+  bottom: 10px;
+  right: 10px;
 }
 
 .background{
