--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -125,6 +125,8 @@
 
 .description-text {
   margin-top: 10px;
+  margin-right: 10%;
+  margin-left: 10%;
   border-radius: 30px;
   margin-bottom: 1px;
   padding: 10px;
