--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -1,24 +1,20 @@
 .workspace-image{
   position: relative;
   overflow: hidden;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
   display: flex;
   justify-content: center; /* Centrer horizontalement */
   align-items: center; /* Centrer verticalement */
+  img{
+    margin-top: 20px;
+    border-radius: 40px;
+    width: 100%;
+  }
 }
 
 .image-container {
   position: relative;
   display: inline-block;
 }
-
-.workspace-image img{
-  max-width: 500px;
-  margin-top: 20px;
-  border-radius: 40px;
-}
-
 
 .workspace-card{
   border-bottom-left-radius: 10px;
