--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -7,7 +7,10 @@
   img{
     margin-top: 20px;
     border-radius: 40px;
-    width: 100%;
+    width: 95%;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -73,7 +76,7 @@
   margin-top: 10px;
   width: 20%;
 }
-.description-adress-show {
+.description-address-show {
   margin-top: 10px;
   width: 100%;
 }
@@ -85,4 +88,13 @@ summary {
     justify-content: center;
     align-items: center;
     gap: 1rem;
+}
+
+.description-text {
+  display: flex;
+  text-align: center;
+  border-radius: 30px;
+  padding: 20px;
+  color: #252525;
+  box-shadow: 0px 0px 10px rgba(170, 170, 170, 0.449);
 }
