--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,12 +1,14 @@
 .yellow-btn {
   padding: 10px 20px;
   text-align: center;
-  align-items: center;
   text-transform: uppercase;
   transition: 0.5s;
   background-size: 200% auto;
   color: white;
   border-radius: 10px;
+  align-items: center;
+  display: block; /* Change button to block-level element */
+  margin: 0 auto; /* Center block-level element horizontally */
   border: 0px;
   font-weight: 700;
   box-shadow: 0px 0px 14px -7px #FFB116;
