--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -10,18 +10,27 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .workspace-image-index img {
-  border-radius: 5px;
-  box-shadow: 0px 0px 5px rgba(173, 173, 173, 0.3);
-  margin-bottom: 10px;
-  width: 100%;
-  max-height: 230px;
+  margin-top: 20px;
+  border-radius: 40px;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 200px;
+
 }
 
 .workspace-infos{
   padding: 6px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .workspace-card-index {
