--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -22,6 +22,7 @@
 .workspace-card{
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  margin-top: 20px;
 }
 
 .font-awesome{
