css button fit content

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,6 +30,7 @@
           <label for="smoking"> <i class="fa-solid fa-ban-smoking fa-2xl"></i> </label>
           <p class="small-text">Fumeur</p>
         </div>
+
         <div class="text-center icone">
           <input type="checkbox" id="animals" name="animals" class="tag-selector" />
           <label for="animals"> <i class="fa-solid fa-ban fa-2xl"></i> </label>
@@ -83,6 +84,6 @@
   </div>
     <div class="col-12 text-center mt-3">
           <div class="col-12 text-center">
-            <a class="yellow-btn btn-home" href="<%= new_workspace_path %>">Je propose un workspace</a>
+            <a class="yellow-btn-home btn-home" href="<%= new_workspace_path %>">Je propose un workspace</a>
       </div>
     </div>
