--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -18,6 +18,27 @@
   white-space: normal;
 }
 
+.yellow-btn-home {
+  padding: 10px 20px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  width: fit-content;
+  color: white;
+  border-radius: 10px;
+  align-items: center;
+  display: block; /* Change button to block-level element */
+  margin: auto; /* Center block-level element horizontally */
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #FFB116;
+  background-image: linear-gradient(45deg, #FC9100 0%, #FFB116  51%, #FC9100  100%);
+  cursor: pointer;
+  opacity: 0.9;
+  white-space: normal;
+}
+
 .yellow-btn-mini {
   padding: 5px 10px;
   text-align: center;
